# PLSBI

./: .gitignore  main.py  readme.md  setup.cfg  setup.py  util.py
src/: PLSForBrainImaging.py
src/PLSBI/: PLSForBrainImaging.py  __init__.py
test/: test.py
