[metadata]
name = PLS-BI
version = 0.0.1
author = Xuan Kan
author_email = xuan.kan@emory.edu
description = PLS-PTSD is a unified, modular and reproducible package established for brain network analysis with Partial Least Square Regression.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Wayfear/PLS-BI
project_urls =
    Bug Tracker = https://github.com/Wayfear/PLS-BI/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src